Fix modal alignment #197

--- a/common/modal/modal.css
+++ b/common/modal/modal.css
@@ -122,7 +122,6 @@
 .modal-content .modal-video {
   width: 100%;
   height: 100%;
-  position: absolute;
   background-color: var(--media-background);
   aspect-ratio: var(--video-aspect-ratio, 16/9);
   border: 0;
